// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SpeciesForm > renders Empty 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        for="mantine-12voha2vo"
        id="mantine-12voha2vo-label"
      >
        Name
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-variant="default"
      >
        <input
          aria-invalid="false"
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-variant="default"
          id="mantine-12voha2vo"
          name="$.name"
          value=""
        />
      </div>
    </div>
    <div
      class="m_bf2d988c mantine-Checkbox-root m_5f75b09e mantine-Checkbox-root"
      data-label-position="right"
      style="--checkbox-color: var(--mantine-color-blue-filled);"
    >
      <div
        class="m_5f6e695e mantine-Checkbox-body"
      >
        <div
          class="m_26062bec mantine-Checkbox-inner"
          data-label-position="right"
        >
          <input
            class="mantine-focus-auto m_26063560 mantine-Checkbox-input"
            id="mantine-1fu8n1fu8"
            name="$.alive"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="m_bf295423 mantine-Checkbox-icon"
            fill="none"
            viewBox="0 0 10 7"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4 4.586L1.707 2.293A1 1 0 1 0 .293 3.707l3 3a.997.997 0 0 0 1.414 0l5-5A1 1 0 1 0 8.293.293L4 4.586z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="m_d3ea56bb mantine-Checkbox-labelWrapper"
        >
          <label
            class="m_8ee546b8 mantine-Checkbox-label"
            for="mantine-1fu8n1fu8"
          >
            Alive
          </label>
        </div>
      </div>
    </div>
    <div
      class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
    >
      <div
        class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      >
        <h1>
          Species
        </h1>
      </div>
    </div>
    <button
      class="mantine-focus-auto mantine-active m_77c9d27d mantine-Button-root m_87cf2631 mantine-UnstyledButton-root"
      style="--button-color: var(--mantine-color-white);"
      type="button"
    >
      <span
        class="m_80f1301b mantine-Button-inner"
      >
        <span
          class="m_811560b9 mantine-Button-label"
        >
          Submit
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`SpeciesForm > renders Errors 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
      data-error="true"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        for="mantine-12voha2vo"
        id="mantine-12voha2vo-label"
      >
        Name
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-error="true"
        data-variant="default"
        style="--input-margin-bottom: calc(var(--mantine-spacing-xs) / 2);"
      >
        <input
          aria-describedby="mantine-12voha2vo-error"
          aria-invalid="true"
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-error="true"
          data-variant="default"
          id="mantine-12voha2vo"
          name="$.name"
          value="Bad"
        />
      </div>
      <p
        class="m_8f816625 mantine-InputWrapper-error mantine-TextInput-error"
        id="mantine-12voha2vo-error"
      >
        name too short
      </p>
    </div>
    <div
      class="m_bf2d988c mantine-Checkbox-root m_5f75b09e mantine-Checkbox-root"
      data-label-position="right"
      style="--checkbox-color: var(--mantine-color-blue-filled);"
    >
      <div
        class="m_5f6e695e mantine-Checkbox-body"
      >
        <div
          class="m_26062bec mantine-Checkbox-inner"
          data-label-position="right"
        >
          <input
            class="mantine-focus-auto m_26063560 mantine-Checkbox-input"
            id="mantine-1fu8n1fu8"
            name="$.alive"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="m_bf295423 mantine-Checkbox-icon"
            fill="none"
            viewBox="0 0 10 7"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4 4.586L1.707 2.293A1 1 0 1 0 .293 3.707l3 3a.997.997 0 0 0 1.414 0l5-5A1 1 0 1 0 8.293.293L4 4.586z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="m_d3ea56bb mantine-Checkbox-labelWrapper"
        >
          <label
            class="m_8ee546b8 mantine-Checkbox-label"
            for="mantine-1fu8n1fu8"
          >
            Alive
          </label>
        </div>
      </div>
    </div>
    <div
      class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
    >
      <div
        class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      >
        <h1>
          Species
        </h1>
      </div>
    </div>
    <button
      class="mantine-focus-auto mantine-active m_77c9d27d mantine-Button-root m_87cf2631 mantine-UnstyledButton-root"
      style="--button-color: var(--mantine-color-white);"
      type="button"
    >
      <span
        class="m_80f1301b mantine-Button-inner"
      >
        <span
          class="m_811560b9 mantine-Button-label"
        >
          Submit
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`SpeciesForm > renders Populated 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        for="mantine-1fu8n1fu8"
        id="mantine-1fu8n1fu8-label"
      >
        Name
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-variant="default"
      >
        <input
          aria-invalid="false"
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-variant="default"
          id="mantine-1fu8n1fu8"
          name="$.name"
          value="Fido"
        />
      </div>
    </div>
    <div
      class="m_bf2d988c mantine-Checkbox-root m_5f75b09e mantine-Checkbox-root"
      data-checked="true"
      data-label-position="right"
      style="--checkbox-color: var(--mantine-color-blue-filled);"
    >
      <div
        class="m_5f6e695e mantine-Checkbox-body"
      >
        <div
          class="m_26062bec mantine-Checkbox-inner"
          data-label-position="right"
        >
          <input
            checked=""
            class="mantine-focus-auto m_26063560 mantine-Checkbox-input"
            id="mantine-1ssssssss"
            name="$.alive"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="m_bf295423 mantine-Checkbox-icon"
            fill="none"
            viewBox="0 0 10 7"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4 4.586L1.707 2.293A1 1 0 1 0 .293 3.707l3 3a.997.997 0 0 0 1.414 0l5-5A1 1 0 1 0 8.293.293L4 4.586z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="m_d3ea56bb mantine-Checkbox-labelWrapper"
        >
          <label
            class="m_8ee546b8 mantine-Checkbox-label"
            for="mantine-1ssssssss"
          >
            Alive
          </label>
        </div>
      </div>
    </div>
    <div
      class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
    >
      <div
        class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      >
        <h1>
          Species
        </h1>
      </div>
    </div>
    <button
      class="mantine-focus-auto mantine-active m_77c9d27d mantine-Button-root m_87cf2631 mantine-UnstyledButton-root"
      style="--button-color: var(--mantine-color-white);"
      type="button"
    >
      <span
        class="m_80f1301b mantine-Button-inner"
      >
        <span
          class="m_811560b9 mantine-Button-label"
        >
          Submit
        </span>
      </span>
    </button>
  </div>
</div>
`;
